source/raylib.pas


{Get color with alpha applied, alpha goes from 0.0f to 1.0f}
function Fade(color: TColorB; alpha: Single): TColorB; cdecl; external cDllName;
{Get hexadecimal value for a Color}
function ColorToInt(color: TColorB): Integer; cdecl; external cDllName;
{Get Color normalized as float [0..1]}
function ColorNormalize(color: TColorB): TVector4; cdecl; external cDllName;
{Get Color from normalized values [0..1]}
function ColorFromNormalized(normalized: TVector4): TColorB; cdecl; external cDllName;
{Get HSV values for a Color, hue [0..360], saturation/value [0..1]}
function ColorToHSV(color: TColorB): TVector3; cdecl; external cDllName;
{Get a Color from HSV values, hue [0..360], saturation/value [0..1]}
function ColorFromHSV(hue, saturation, value: Single): TColorB; cdecl; external cDllName;
{Get color with alpha applied, alpha goes from 0.0f to 1.0f}
function ColorAlpha(color: TColorB; alpha: Single): TColorB; cdecl; external cDllName;
{Get src alpha-blended into dst color with tint}
function ColorAlphaBlend(dst, src, tint: TColorB): TColorB; cdecl; external cDllName;
{Get Color structure from hexadecimal value}
function GetColor(hexValue: LongWord): TColorB; cdecl; external cDllName;
{Get Color from a source pixel pointer of certain format}
function GetPixelColor(srcPtr: Pointer; format: Integer): TColorB; cdecl; external cDllName;
{Set color formatted into destination pixel pointer}
procedure SetPixelColor(dstPtr: Pointer; color: TColorB; format: Integer); cdecl; external cDllName;
{Get pixel data size in bytes for certain format}
function GetPixelDataSize(width, height, format: Integer): Integer; cdecl; external cDllName;

//------------------------------------------------------------------------------------
// TFont Loading and Text Drawing Functions (Module: text)
//------------------------------------------------------------------------------------

(* Font loading/unloading functions *)

{Get the default Font}
function GetFontDefault: TFont; cdecl; external cDllName;
{Load font from file into GPU memory (VRAM)}
function LoadFont(fileName: PChar): TFont; cdecl; external cDllName;
{Load font from file with extended parameters, use NULL for fontChars and 0 for glyphCount to load the default character set}
function LoadFontEx(fileName: Pchar; fontSize: Integer; fontChars: PInteger; glyphCount: Integer): TFont; cdecl; external cDllName;
{Load font from Image (XNA style)}
function LoadFontFromImage(image: TImage; key: TColorB; firstChar: Integer): TFont; cdecl; external cDllName;
{Load font from memory buffer, fileType refers to extension: i.e. '.ttf'}
function LoadFontFromMemory(fileType: PChar; fileData: Pointer; dataSize, fontSize: Integer; fontChars: PInteger; glyphCount: Integer): TFont; cdecl; external cDllName;
{Load font data for further uses}
function LoadFontData(fileData: Pointer; dataSize, fontSize: Integer; fontChars: PInteger; glyphCount, _type: Integer): PGlyphInfo; cdecl; external cDllName;
{Generate image font atlas using chars info}
function GenImageFontAtlas(chars: PGlyphInfo; recs: PPRectangle; glyphCount, fontSize, padding, packMethod: Integer): TImage; cdecl; external cDllName;
{Unload font chars info data (RAM)}
procedure UnloadFontData(chars: PGlyphInfo; glyphCount: Integer); cdecl; external cDllName;
{Unload Font from GPU memory (VRAM)}
procedure UnloadFont(font: TFont); cdecl; external cDllName;
{Export font as code file, returns true on success}
procedure ExportFontAsCode(font: TFont; fileName: PChar); cdecl; external cDllName;


(* Text drawing functions *)

{Draw current FPS}
procedure DrawFPS(posX, posY: Integer); cdecl; external cDllName;
{Draw text (using default font)}
procedure DrawText(text: PChar; posX, posY, fontSize: Integer; color: TColorB); cdecl; external cDllName;
{Draw text using font and additional parameters}
procedure DrawTextEx(font: TFont; text: PChar; position: TVector2; fontSize, spacing: Single; tint:TColorB); cdecl; external cDllName;
{Draw text using Font and pro parameters (rotation)}
procedure DrawTextPro(font: TFont; text: PChar; position, origin: TVector2; rotation, fontSize, spacing: Single; tint: TColorB); cdecl; external cDllName;
{Draw one character (codepoint)}
procedure DrawTextCodepoint(font: TFont; codepoint: Integer; position: TVector2; fontSize: Single; tint: TColorB); cdecl; external cDllName;
{Draw multiple character (codepoint)}
procedure DrawTextCodepoints(font: TFont; const codepoints: PInteger; count: Integer; position: TVector2; fontSize, spacing: Single; tint: TColorB); cdecl; external cDllName;


(* Text font info functions *)

{Measure string width for default font}
function MeasureText(text: PChar; fontSize: Integer): Integer; cdecl; external cDllName;
{Measure string size for Font}
function MeasureTextEx(font: TFont; text: PChar; fontSize, spacing: Single): TVector2; cdecl; external cDllName;
{Get glyph index position in font for a codepoint (unicode character), fallback to '?' if not found}
function GetGlyphIndex(font: TFont; codepoint: Integer): Integer; cdecl; external cDllName;
{Get glyph font info data for a codepoint (unicode character), fallback to '?' if not found}
function GetGlyphInfo(font: TFont; codepoint: Integer): TGlyphInfo; cdecl; external cDllName;
{Get glyph rectangle in font atlas for a codepoint (unicode character), fallback to '?' if not found}
function GetGlyphAtlasRec(font: TFont; codepoint: Integer): TRectangle; cdecl; external cDllName;


(* Text codepoints management functions (unicode characters) *)

{Load all codepoints from a UTF-8 text string, codepoints count returned by parameter}
function LoadCodepoints(text: PChar; count: PInteger): PInteger; cdecl; external cDllName;
{Unload codepoints data from memory}
procedure UnloadCodepoints(codepoints: PInteger); cdecl; external cDllName;
{Get total number of codepoints in a UTF-8 encoded string}
function GetCodepointCount(text: PChar): Integer; cdecl; external cDllName;
{Get next codepoint in a UTF-8 encoded string, 0x3f('?') is returned on failure}
function GetCodepoint(text: PChar; bytesProcessed: PInteger): Integer; cdecl; external cDllName;
{Encode one codepoint into UTF-8 byte array (array length returned as parameter)}
function CodepointToUTF8(codepoint: Integer; byteSize: PInteger): PChar; cdecl; external cDllName;
{Encode text as codepoints array into UTF-8 text string (WARNING: memory must be freed!)}
function TextCodepointsToUTF8(const codepoints: PInteger; length: Integer): PChar; cdecl; external cDllName;


(* Text strings management functions (no UTF-8 strings, only byte chars) *)
// NOTE: Some strings allocate memory internally for returned strings, just be careful!

{Copy one string to another, returns bytes copied}
function TextCopy(dst, src: PChar): Integer; cdecl; external cDllName;
{Check if two text string are equal}
function TextIsEqual(text1, text2: PChar): Boolean; cdecl; external cDllName;
{Get text length, checks for '\0' ending}
function TextLength(text: PChar): LongWord; cdecl; external cDllName;

{Text formatting with variables (sprintf() style)}
function TextFormat(text: PChar): PChar; cdecl; varargs; external cDllName;
{Get a piece of a text string}
function TextSubtext(text: PChar; position, length: Integer): PChar; cdecl; external cDllName;
{Replace text string (WARNING: memory must be freed!)}
function TextReplace(text, replace, by: PChar): PChar; cdecl; external cDllName;
{Insert text in a position (WARNING: memory must be freed!)}
function TextInsert(text, insert: PChar; position: Integer): PChar; cdecl; external cDllName;
{Join text strings with delimiter}
function TextJoin(textList: PPChar; count: Integer; delimiter: PChar): PChar; cdecl; external cDllName;
{Split text into multiple strings}
function TextSplit(text: PChar; delimiter: Char; count: PInteger): PPChar; cdecl; external cDllName;
{Append text at specific position and move cursor!}
procedure TextAppend(text, append: PChar; position: PInteger); cdecl; external cDllName;
{Find first text occurrence within a string}
function TextFindIndex(text, find: PChar): Integer; cdecl; external cDllName;
{Get upper case version of provided string}
function TextToUpper(text: PChar): PChar; cdecl; external cDllName;
{Get lower case version of provided string}
function TextToLower(text: PChar):PChar; cdecl; external cDllName;
{Get Pascal case notation version of provided string}
function TextToPascal(text: PChar): PChar; cdecl; external cDllName;
{Get integer value from text (negative values not supported)}
function TextToInteger(text: PChar): Integer; cdecl; external cDllName;

//------------------------------------------------------------------------------------
// Basic 3d Shapes Drawing Functions (Module: models)
//------------------------------------------------------------------------------------

(* Basic geometric 3D shapes drawing functions *)

{Draw a line in 3D world space}
procedure DrawLine3D(startPos, endPos: TVector3; color: TColorB); cdecl; external cDllName;
{Draw a point in 3D space, actually a small line}
procedure DrawPoint3D(position: TVector3; color: TColorB); cdecl; external cDllName;
{Draw a circle in 3D world space}
procedure DrawCircle3D(center: TVector3; radius: Single; rotationAxis: TVector3; rotationAngle: Single; color: TColorB); cdecl; external cDllName;
{Draw a color-filled triangle (vertex in counter-clockwise order!)}
procedure DrawTriangle3D(v1, v2, v3: TVector3; color: TColorB); cdecl; external cDllName;
{Draw a triangle strip defined by points}
procedure DrawTriangleStrip3D(points: PVector3; pointCount: Integer; color: TColorB); cdecl; external cDllName;
{Draw cube}
procedure DrawCube(position: TVector3; width, height, length: Single; color: TColorB); cdecl; external cDllName;
{Draw cube (Vector version)}
procedure DrawCubeV(position, size: TVector3; color: TColorB); cdecl; external cDllName;
{Draw cube wires}
procedure DrawCubeWires(position: TVector3; width, height, length: Single; color: TColorB); cdecl; external cDllName;
{Draw cube wires (Vector version)}
procedure DrawCubeWiresV(position, size: TVector3; color: TColorB); cdecl; external cDllName;
{Draw cube textured}
procedure DrawCubeTexture(texture: TTexture2D; position: TVector3; width, height, length: Single; color: TColorB); cdecl; external cDllName;
{Draw cube with a region of a texture}
procedure DrawCubeTextureRec(texture: TTexture2D; source: TRectangle; position: TVector3; width, height, length: Single; color: TColorB); cdecl; external cDllName;
{Draw sphere}
procedure DrawSphere(centerPos: TVector3; radius: Single; color: TColorB); cdecl; external cDllName;
{Draw sphere with extended parameters}
procedure DrawSphereEx(centerPos: TVector3; radius: Single; rings, slices: Integer; color: TColorB); cdecl; external cDllName;
{Draw sphere wires}
procedure DrawSphereWires(centerPos: TVector3; radius: Single; rings, slices: Integer; color: TColorB); cdecl; external cDllName;
{Draw a cylinder/cone}
procedure DrawCylinder(position: TVector3; radiusTop, radiusBottom, height: Single; slices: Integer; color: TColorB); cdecl; external cDllName;
{Draw a cylinder with base at startPos and top at endPos}
procedure DrawCylinderEx(startPos, endPos: TVector3; startRadius, endRadius: Single; sides: Integer; color: TColorB); cdecl; external cDllName;
{Draw a cylinder/cone wires}
procedure DrawCylinderWires(position: TVector3; radiusTop, radiusBottom, height: Single; slices: Integer; color: TColorB); cdecl; external cDllName;
{Draw a cylinder wires with base at startPos and top at endPos}
procedure DrawCylinderWiresEx(startPos, endPos: TVector3; startRadius, endRadius: Single; sides: Integer; color: TColorB); cdecl; external cDllName;
{Draw a plane XZ}
procedure DrawPlane(centerPos: TVector3; size: TVector2; color: TColorB); cdecl; external cDllName;
{Draw a ray line}
procedure DrawRay(ray: TRay; color: TColorB); cdecl; external cDllName;
{Draw a grid (centered at (0, 0, 0))}
procedure DrawGrid(slices: Integer; spacing: Single); cdecl; external cDllName;
